--- a/styles.css
+++ b/styles.css
@@ -27,3 +27,13 @@ body {
     margin: 0 0 10px;    
     padding: 10px;
 }
+
+.primary-box p em{
+    color: blue;
+}
+.secondary-box p{
+    font-family: Arial, Helvetica, sans-serif;
+}
+.secondary-box p em{
+    color: magenta;
+}
